--- a/package.json
+++ b/package.json
@@ -1,33 +1,31 @@
 {
-  "name": "@ijavad805/react-datepicker",
-  "version": "2.1.15",
+  "name": "@riunge/react-datepicker",
+  "version": "2.1.16",
   "description": "cool date picker and calendar for English and Persian",
   "scripts": {
     "rollup": "rollup -c",
     "test": "jest",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook -o ./docs"
+    "build-storybook": "build-storybook -o ./docs",
+    "format": "prettier --write --ignore-unknown ."
   },
   "private": false,
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ijavad805/react-datepicker.git"
+    "url": "git+https://github.com/riungemaina/react-datepicker"
   },
   "keywords": [
     "datepicker",
     "react",
-    "jalali",
     "date picker",
     "date",
     "react-component",
-    "persian",
-    "shamsi",
-    "farsi"
+    "next"
   ],
-  "author": "Javad kazemzadeh",
+  "author": "Max Riunge & Javad kazemzadeh",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ijavad805/react-datepicker/issues"
+    "url": "https://github.com/riungemaina/react-datepicker/wiki/Bugs"
   },
   "homepage": "https://ijavad805.github.io/react-datepicker/",
   "devDependencies": {
@@ -64,7 +62,8 @@
     "style-loader": "^3.3.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
-    "jest-environment-jsdom": "^29.3.1"
+    "jest-environment-jsdom": "^29.3.1",
+    "prettier": "^3.0.3"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
