--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@riunge/react-datepicker",
-  "version": "2.1.20",
+  "version": "2.1.21",
   "description": "cool date picker and calendar for react",
   "scripts": {
     "rollup": "rollup -c",
     "test": "jest",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook -o ./docs",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build -o ./docs",
     "format": "prettier --write --ignore-unknown ."
   },
   "private": false,
@@ -30,18 +30,18 @@
   "homepage": "http://react-datepicker.castynet.africa/",
   "devDependencies": {
     "@babel/core": "^7.18.10",
+    "@chromatic-com/storybook": "^1.3.3",
     "@rollup/plugin-commonjs": "^22.0.2",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@rollup/plugin-typescript": "^8.3.4",
-    "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-essentials": "^6.5.10",
-    "@storybook/addon-interactions": "^6.5.10",
-    "@storybook/addon-links": "^6.5.10",
-    "@storybook/builder-webpack5": "^6.5.10",
-    "@storybook/manager-webpack5": "^6.5.10",
+    "@storybook/addon-actions": "^8.0.8",
+    "@storybook/addon-essentials": "^8.0.8",
+    "@storybook/addon-interactions": "^8.0.8",
+    "@storybook/addon-links": "^8.0.8",
+    "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/react": "^6.5.10",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/react": "^8.0.8",
+    "@storybook/react-webpack5": "^8.0.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.17",
@@ -49,7 +49,9 @@
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "identity-obj-proxy": "^3.0.0",
+    "jest-environment-jsdom": "^29.3.1",
     "postcss": "^8.4.16",
+    "prettier": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^2.78.1",
@@ -61,9 +63,7 @@
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4",
-    "jest-environment-jsdom": "^29.3.1",
-    "prettier": "^3.0.3"
+    "typescript": "^4.7.4"
   },
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
@@ -72,10 +72,13 @@
   ],
   "types": "dist/index.d.ts",
   "peerDependencies": {
-    "react": ">=16.9.0",
-    "react-dom": ">=16.9.0"
+    "react": ">=18.2.0",
+    "react-dom": ">=18.2.0"
   },
   "dependencies": {
-    "moment": "^2.29.4"
+    "@babel/preset-react": "^7.24.1",
+    "@storybook/test": "^8.0.8",
+    "moment": "^2.29.4",
+    "storybook": "^8.0.8"
   }
 }
